--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,35 @@
 version: "3.5"
 services:
-    app-consumer:
-        working_dir: /var/www/html/example-app
+    mq-producer:
+        hostname: mq-producer
+        container_name: mq-producer
+        working_dir: /var/www/html/
         image: php:8.1-fpm-alpine
         volumes:
-            - ../:/var/www/html
+            - ./:/var/www/html/
         ports:
-            - "8000:8000"
-        restart: always
-        command: sh -c "php artisan serve --host=0.0.0.0"
-        extra_hosts:
-            - host.docker.internal:host-gateway
-    app-producer:
-        working_dir: /var/www/html/example-app
-        image: php:8.1-fpm-alpine
-        volumes:
-            - ../:/var/www/html
-        ports:
-            - "8001:8000"
+            - "9000:8000"
         expose:
-            - 8000
+            - 9000
         restart: always
         command: sh -c "php artisan serve --host=0.0.0.0"
-        extra_hosts:
-            - host.docker.internal:host-gateway
-    laravel-mysql:
+    mq-consumer:
+        hostname: mq-consumer
+        container_name: mq-consumer
+        working_dir: /var/www/html/
+        image: php:8.1-fpm-alpine
+        volumes:
+            - ./:/var/www/html/
+        ports:
+            - "9001:8000"
+        expose:
+            - 9001
+        restart: always
+        command: sh -c "php artisan serve --host=0.0.0.0"
+    mq-mysql:
         image: mysql:5.7.22
-        hostname: laravel-mysql
-        container_name: laravel-mysql
+        hostname: mq-mysql
+        container_name: mq-mysql
         environment:
             MYSQL_DATABASE: laravel
             MYSQL_ROOT_PASSWORD: root
@@ -37,10 +39,10 @@ services:
             - 3306
         volumes:
             - ./database/mysql:/docker-entrypoint-initdb.d
-    rabbitmq:
+    mq-rabbitmq:
         image: rabbitmq:3-management-alpine
-        container_name: rabbitmq
-        hostname: rabbitmq
+        container_name: mq-rabbitmq
+        hostname: mq-rabbitmq
         environment:
             - RABBITMQ_DEFAULT_USER=root
             - RABBITMQ_DEFAULT_PASS=root
