--- a/package.json
+++ b/package.json
@@ -10,9 +10,34 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
+        "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
-    }
+        "postcss": "^8.1.14",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "firebase": "^9.14.0"
+    },
+    "name": "html",
+    "description": "",
+    "version": "1.0.0",
+    "main": "webpack.mix.js",
+    "directories": {
+        "test": "tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/imsyuan/laravel-rabbitmq-fcm.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/imsyuan/laravel-rabbitmq-fcm/issues"
+    },
+    "homepage": "https://github.com/imsyuan/laravel-rabbitmq-fcm#readme"
 }
