--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,35 @@
 version: "3.5"
 services:
+    mq-mysql:
+        image: mysql:5.7.22
+        hostname: mq-mysql
+        container_name: mq-mysql
+        environment:
+            MYSQL_DATABASE: laravel
+            MYSQL_ROOT_PASSWORD: root
+        ports:
+            - "3306:3306"
+        expose:
+            - 3306
+        volumes:
+            - ./database/mysql:/docker-entrypoint-initdb.d
+    mq-rabbitmq:
+        image: rabbitmq:3.9.10-management
+        container_name: mq-rabbitmq
+        hostname: mq-rabbitmq
+        environment:
+            - RABBITMQ_DEFAULT_VHOST=/
+            - RABBITMQ_DEFAULT_USER=root
+            - RABBITMQ_DEFAULT_PASS=root
+        ports:
+            - "5672:5672"
+            - "15672:15672"
+        expose:
+            - 5672
+            - 15672
+#        volumes:
+#            - ./storage/rabbitmq/data:/var/lib/rabbitmq/
+#            - ./storage/logs/rabbitmq/log:/var/log/rabbitmq
     mq-producer:
         build:
             dockerfile: Dockerfile
@@ -15,33 +45,3 @@ services:
         restart: always
         command: |
             sh -c "php artisan serve --host=0.0.0.0"
-    mq-mysql:
-        image: mysql:5.7.22
-        hostname: mq-mysql
-        container_name: mq-mysql
-        environment:
-            MYSQL_DATABASE: laravel
-            MYSQL_ROOT_PASSWORD: root
-        ports:
-            - "3306:3306"
-        expose:
-            - 3306
-        volumes:
-            - ./database/mysql:/docker-entrypoint-initdb.d
-    mq-rabbitmq:
-        image: rabbitmq:3-management-alpine
-        container_name: mq-rabbitmq
-        hostname: mq-rabbitmq
-        environment:
-            - RABBITMQ_DEFAULT_USER=root
-            - RABBITMQ_DEFAULT_PASS=root
-        ports:
-            - "5672:5672"
-            - "15672:15672"
-        expose:
-            - 5672
-            - 15672
-        volumes:
-            - ./storage/rabbitmq/data:/var/lib/rabbitmq/
-            - ./storage/logs/rabbitmq/log:/var/log/rabbitmq
-
